infrastructure/kubernetes/sandbox-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sandbox-ui
  namespace: dev
  labels:
    app: sandbox-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sandbox-ui
  template:
    metadata:
      labels:
        app: sandbox-ui
    spec:
      containers:
        - name: sandbox-ui
          image: europe-southwest1-docker.pkg.dev/sandbox-431715/sandbox-docker/sandbox-ui:1.1.2-SNAPSHOT
          ports:
            - containerPort: 8080
#          livenessProbe:
#            httpGet:
#              path: /actuator/health/liveness
#              port: 8080
#            initialDelaySeconds: 3000
#            periodSeconds: 2000
#          readinessProbe:
#            httpGet:
#              path: /actuator/health/readiness
#              port: 8080
#            initialDelaySeconds: 1500
#            periodSeconds: 10000
